# PID-Controlled-HeatBed

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  adcitf.cpp  adcold.txt  globals.h  lcd.cpp  main.cpp  manual.cpp  menu.cpp  pidalgo.cpp  tempitf.cpp  triac_zcd.cpp
main/dimmer/: dimmer.c  dimmer.h
main/rotary_lib/: rotary_encoder.c
